Added sign up screen

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -39,13 +39,15 @@
   "enter_info": "Enter your information below or login with a social account",
   "name": "Name",
   "next": "Next",
-  "enter_valid_email": "Please enter a valid email",
-  "enter_your_password": "Please enter your password",
-  "enter_username": "Please enter a username",
-  "enter_strong_password": "Please enter a strong password",
+  "enter_valid_email": "Please enter a valid email.",
+  "enter_your_email": "Please enter your email.",
+  "enter_your_password": "Please enter your password.",
+  "enter_username": "Please enter a username.",
+  "enter_strong_password": "Please enter a strong password.",
   "sign_up_facebook": "Sign up with Facebook",
   "sign_up_google": "Sign up with Google",
   "adoption": "Adoption",
+  "passwords_not_match": "Passwords not matching.",
 
   "african_gray_parrot": "African Gray Parrot",
   "amazon_parrot": "Amazon Parrot",
@@ -426,6 +428,10 @@
   "verify_email": "Verify Email",
   "verification_email_sent": "A verification email has been sent to your email.",
   "resend_email": "Resend Email",
+  "username": "Username",
+  "confirm_password": "Confirm password",
+  "confirm_your_password": "Confirm your password.",
+  "back": "Back",
 
 
   "Adoption": "Adoption",
